[package]
name = "ccp_nimbus"
version = "0.4.1"
authors = ["Prateesh Goyal <prateesh@mit.edu>"]
edition = "2021"

[dependencies]
portus = "0.8"
rand="0.8"
anyhow = "1"
num-complex="0.4"
rustfft="6"
tracing="0.1"
tracing-subscriber="0.3"
structopt = "0.2"
csv="1.2.2"
serde = { version = "1", features = ["derive"] }
